[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["valheim"]


[project]
name = "valheim"
authors = [
    {name = "Hannes"},
]
description = "parse valheim .fch save files"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["save", "file", "valheim", "game", "fch", "viking"]
#license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
#dynamic = ["dependencies"]
dependencies = ['importlib-metadata; python_version<"3.7"']
#dynamic = ["version"]
version = "0.0.1"

#[project.optional-dependencies]
#yaml = ["pyyaml"]

[project.scripts]
valheim = "valheim.py:main"

[project.urls]
Homepage = "https://github.com/hannesdelbeke/"
Source = "https://github.com/hannesdelbeke/"
